верстка внутренней страницы

--- a/service-page-inner.html
+++ b/service-page-inner.html
@@ -342,105 +342,28 @@
                            </li>
                            <li class="breadcrumbs__item">
                               <a href="service-item.html"
-                                 class="breadcrumbs__link breadcrumbs__link--activ">Автотранспортные услуги</a>
+                                 class="breadcrumbs__link">Автотранспортные услуги</a>
+                           </li>
+                           <li class="breadcrumbs__item">
+                              <a href="service-page-inner.html"
+                                 class="breadcrumbs__link breadcrumbs__link--activ">Технический осмотр</a>
                            </li>
                         </ul>
                      </div>
                   </div>
                   <h1 class="title title--margin ">
-                     Автотранспортные услуги
+                     Технический осмотр
                   </h1>
-                  <div class="service-item">
-                     <ul class="service-item__list">
-                        <li class="service-item__item">
-                           <a href="service-page-inner.html" class="service-item__link">
-                              <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                 <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid">
-                                 </use>
-                              </svg>
-                              <span class="service-item__text">
-                                 Технический осмотр
-                              </span>
-                           </a>
-                        </li>
-                        <li class="service-item__item">
-                           <a href="#" class="service-item__link">
-                              <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                 <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid">
-                                 </use>
-                              </svg>
-                              <span class="service-item__text">
-                                 Сопровождение ГАИ
-                              </span>
-                           </a>
-                        </li>
-                        <li class="service-item__item">
-                           <a href="#" class="service-item__link">
-                              <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                 <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid">
-                                 </use>
-                              </svg>
-                              <span class="service-item__text">
-                                 Выдача дублекатов
-                              </span>
-                           </a>
-                        </li>
-                        <li class="service-item__item">
-                           <a href="#" class="service-item__link">
-                              <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                 <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid">
-                                 </use>
-                              </svg>
-                              <span class="service-item__text">
-                                 Томоженное оформление
-                              </span>
-                           </a>
-                        </li>
-                        <li class="service-item__item">
-                           <a href="#" class="service-item__link">
-                              <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                 <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid">
-                                 </use>
-                              </svg>
-                              <span class="service-item__text">
-                                 Регистрация (перерегистрация), оформление автотранспортные средств
-                              </span>
-                           </a>
-                        </li>
-
-                     </ul>
+                  <div class="main-content__text">
+                
+                     <p>
+                        В соответствии с положением «О порядке проведения технического осмотра транспортных средств» утвержденного постановлением Правительства Кыргызской Республики от 3 мая 2013 года № 239, технический осмотр транспортных средств проводится диагностическими центрами, аккредитованными в соответствии с Законом Кыргызской Республики «Об основах технического регулирования Кыргызской Республики».
+                     </p> 
+                     <p>
+                           При проведении технического осмотра проверяются параметры транспортных средств, определенные Законом Кыргызской Республики «Технический регламент Кыргызской Республики по безопасности наземных транспортных средств».Технический осмотр автотранспортных средств дипломатических представительств осуществляется через ГП «Кыргыздипсервис»
+                     </p>
                   </div>
-                  <div class="title-block">
-                     <h1 class="title">
-                        Необходимые докумeнты
-                     </h1>
-                  </div>
-                  <div class="service-item">
-                        <ul class="service-item__list">
-                           <li class="service-item__item">
-                              <a href="#" class="service-item__link">
-                                 <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                    <use xlink:href="assets/img/sprite/sprite-icons.svg#file-word-regular">
-                                    </use>
-                                 </svg>
-                                 <span class="service-item__text">
-                                    Памятка водителям
-                                 </span>
-                              </a>
-                           </li>
-                           <li class="service-item__item">
-                              <a href="#" class="service-item__link">
-                                 <svg class="sidbar-title__icon-caret service-item--color" aria-hidden="true">
-                                    <use xlink:href="assets/img/sprite/sprite-icons.svg#file-word-regular">
-                                    </use>
-                                 </svg>
-                                 <span class="service-item__text">
-                                    Сроки рассмотрение документов
-                                 </span>
-                              </a>
-                           </li>                        
-                        </ul>
-                  </div>
+                 
                </main>
             </div>
          </div>
