стилизация внутренней страницы

--- a/service-page-inner.html
+++ b/service-page-inner.html
@@ -363,7 +363,9 @@
                            При проведении технического осмотра проверяются параметры транспортных средств, определенные Законом Кыргызской Республики «Технический регламент Кыргызской Республики по безопасности наземных транспортных средств».Технический осмотр автотранспортных средств дипломатических представительств осуществляется через ГП «Кыргыздипсервис»
                      </p>
                   </div>
-                 
+                  <div class="main-content__btn">
+                     <button class="main-btn">Заказать</button>
+                  </div>                 
                </main>
             </div>
          </div>
