--- a/service.html
+++ b/service.html
@@ -184,7 +184,7 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">
+                        <a href="new-item.html" class="nav__link">
                             <span class="nav__animate">Новости</span>
                         </a>
                     </li>
