--- a/o-compyni.html
+++ b/o-compyni.html
@@ -291,7 +291,22 @@
                         <div class="main-content__text">
                            <img src="/assets/img/logo/logo.png" alt="логотип кыргыздипсервиса">
                            <p>С начала установления дипломатических отношений между независимым Кыргызстаном и мировым сообществом Государственное Предприятие "Кыргыздипсервис" является единым заказчиком и координатором всех видов услуг по обслуживанию аккредитованного в республике дипломатического корпуса и надёжно обеспечивает деятельность дипломатических миссий и представительств международных организаций. ГП «Кыргыздипсервис»  предоставляет качественное обслуживание дипломатических</p>                    
-                        </div>              
+                        </div>    
+                        <h1 class="title title--margin ">
+                          Наши зарубежные партнеры    
+                        </h1>
+                        <div class="partners-block">
+                           <div class="partners-block__pic">
+                              <a href="#" class="partners-block__link">
+                                 <img src="/assets/img/logo/logoUPDK.jpg" alt="logo партнеров" class="partners-block__img" >
+                              </a>
+                           </div>                          
+                           <div class="partners-block__pic">
+                              <a href="#" class="partners-block__link">
+                                 <img src="/assets/img/logo/uk.jpg" alt="logo партнеров" class="partners-block__img" >
+                              </a>
+                           </div>                          
+                        </div>          
                     </main>
                 </div>
 
