--- a/new-item.html
+++ b/new-item.html
@@ -194,7 +194,7 @@
                   </a>
                </li>
                <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="o-compyni.html" class="nav__link">
                      <span class="nav__animate">О компании</span>
                   </a>
                </li>
