--- a/contact.html
+++ b/contact.html
@@ -280,33 +280,16 @@
                                              <a href="index.html" class="breadcrumbs__link">Главная</a>
                                           </li>
                                           <li class="breadcrumbs__item">
-                                             <a href="service.html" class="breadcrumbs__link breadcrumbs__link--activ">О компании</a>
+                                             <a href="service.html" class="breadcrumbs__link breadcrumbs__link--activ">Контакты</a>
                                           </li>
                                  </ul>                      
                               </div>
                         </div>
                         <h1 class="title title--margin ">
-                           О компании
+                           Контактная информация
                         </h1>
-                        <div class="main-content__text">
-                           <img src="/assets/img/logo/logo.png" alt="логотип кыргыздипсервиса">
-                           <p>С начала установления дипломатических отношений между независимым Кыргызстаном и мировым сообществом Государственное Предприятие "Кыргыздипсервис" является единым заказчиком и координатором всех видов услуг по обслуживанию аккредитованного в республике дипломатического корпуса и надёжно обеспечивает деятельность дипломатических миссий и представительств международных организаций. ГП «Кыргыздипсервис»  предоставляет качественное обслуживание дипломатических</p>                    
-                        </div>    
-                        <h1 class="title title--margin ">
-                          Наши зарубежные партнеры    
-                        </h1>
-                        <div class="partners-block">
-                           <div class="partners-block__pic">
-                              <a href="#" class="partners-block__link">
-                                 <img src="/assets/img/logo/logoUPDK.jpg" alt="logo партнеров" class="partners-block__img" >
-                              </a>
-                           </div>                          
-                           <div class="partners-block__pic">
-                              <a href="#" class="partners-block__link">
-                                 <img src="/assets/img/logo/uk.jpg" alt="logo партнеров" class="partners-block__img" >
-                              </a>
-                           </div>                          
-                        </div>          
+                                           
+                            
                     </main>
                 </div>
 
