конец стилизация странцы контакты

--- a/contact.html
+++ b/contact.html
@@ -334,22 +334,29 @@
                             Обратная связь
                         </h1>
                         <form action="" class="form-feedback">
-                            <div class="form-feedback__field">
-                                <label for="name" class="form-feedback__label">Имя</label>
-                                <input type="text" class="form-feedback__input" name="name" placeholder="Введите имя"  required>
-                            </div>
-                            <div class="form-feedback__field">
-                                <label for="e-mail" class="form-feedback__label">E-mail</label>
-                                <input type="email"  class="form-feedback__input" name="e-mail" placeholder="Введите почту" required>
-                            </div>
-                            <div class="form-feedback__field">
-                                <label for="phone" class="form-feedback__label">Телефон</label>
-                                <input type="phone"  class="form-feedback__input" name="phone" placeholder="Введите телефон" required>
-                            </div>
-                            <div class="form-feedback__field">
-                                <label for="message" class="form-feedback__label">Текст сообщения</label>
-                                <textarea name="message" class="form-feedback__textarea"   id="" placeholder="Ведите текст сообщения"></textarea>
-                            </div>
+                            <div class="form-feedback__flexcontainer">
+                                <div class="form-feedback__field">
+                                    <label for="name" class="form-feedback__label">Имя</label>
+                                    <input type="text" class="form-feedback__input" name="name"
+                                        placeholder="Введите имя" required>
+                                </div>
+                                <div class="form-feedback__field">
+                                    <label for="e-mail" class="form-feedback__label">E-mail</label>
+                                    <input type="email" class="form-feedback__input" name="e-mail"
+                                        placeholder="Введите почту" required>
+                                </div>
+                                <div class="form-feedback__field">
+                                    <label for="phone" class="form-feedback__label">Телефон</label>
+                                    <input type="phone" class="form-feedback__input" name="phone"
+                                        placeholder="Введите телефон" required>
+                                </div>
+                                <div class="form-feedback__field">
+                                    <label for="message" class="form-feedback__label">Текст сообщения</label>
+                                    <textarea name="message" class="form-feedback__textarea" id=""
+                                        placeholder="Ведите текст сообщения"></textarea>
+                                </div>
+                            </div>                            
+                                <button class="main-btn">Отправить</button>                          
                         </form>
                     </main>
                 </div>
