--- a/contact.html
+++ b/contact.html
@@ -194,12 +194,12 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">
+                        <a href="o-compyni.html" class="nav__link">
                             <span class="nav__animate">О компании</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">
+                        <a href="contact.html" class="nav__link">
                             <span class="nav__animate">Контакты</span>
                         </a>
                     </li>
