--- a/new-item.html
+++ b/new-item.html
@@ -199,7 +199,7 @@
                   </a>
                </li>
                <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="contact.html" class="nav__link">
                      <span class="nav__animate">Контакты</span>
                   </a>
                </li>
