линканул для удобства

--- a/service.html
+++ b/service.html
@@ -457,7 +457,7 @@
                                     </li>
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
+                                            <a href="arenda_nedvijenosti.html" class="catalog__link">
                                                 <img src="/assets/img/catalog/hom3.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Аренда недвижемости</span>
