первая страничка аренды недвижемости

--- a/arenda_nedvijenosti.html
+++ b/arenda_nedvijenosti.html
@@ -347,6 +347,46 @@
                         <h1 class="title title--margin ">
                               Аренда недвижимости
                         </h1>
+                        <div class="catalog-block">
+                              <ul class="catalog__list catalog__list--margin">
+                                  <li class="catalog__item catalog--flex">
+                                      <div class="catalog__desc">
+                                          <a href="#" class="catalog__link">
+                                              <img src="/assets/img/foto/home1.jpg" alt="catalog-pic"
+                                                  class="catalog__pic">
+                                              <span class="catalog__text catalog--color ">Особняк районе Арча-Бешик Кара-Коо</span>
+                                          </a>
+                                      </div>
+                                  </li>
+                                  <li class="catalog__item catalog--flex">
+                                      <div class="catalog__desc">
+                                          <a href="#" class="catalog__link">
+                                              <img src="/assets/img/foto/home3.jpg" alt="catalog-pic"
+                                                  class="catalog__pic">
+                                              <span class="catalog__text catalog--color ">Особняк 4-х уровневый р/н Киргизия-1</span>
+                                          </a>
+                                      </div>
+                                  </li>
+                                  <li class="catalog__item catalog--flex">
+                                      <div class="catalog__desc">
+                                          <a href="#" class="catalog__link">
+                                              <img src="/assets/img/foto/home4.jpg" alt="catalog-pic"
+                                                  class="catalog__pic">
+                                              <span class="catalog__text catalog--color "> 4-x комнатная квартира р/н Киргизия-1</span>
+                                          </a>
+                                      </div>
+                                  </li>
+                                  <li class="catalog__item catalog--flex">
+                                      <div class="catalog__desc">
+                                          <a href="#" class="catalog__link">
+                                              <img src="/assets/img/foto/guest_house1.JPG" alt="catalog-pic"
+                                                  class="catalog__pic">
+                                              <span class="catalog__text catalog--color ">Гостевой дом "Дипломат" </span>
+                                          </a>
+                                      </div>
+                                  </li>                                  
+                              </ul>
+                        </div>
                     </main>
                 </div>
 
