--- a/arenda_nedvijenosti.html
+++ b/arenda_nedvijenosti.html
@@ -352,8 +352,12 @@
                                   <li class="catalog__item catalog--flex">
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
-                                              <img src="/assets/img/foto/home1.jpg" alt="catalog-pic"
-                                                  class="catalog__pic">
+                                             <div class="catalog__wrapp-pic price--position ">
+                                                   <img src="/assets/img/foto/home1.jpg" alt="catalog-pic"
+                                                   class="catalog__pic">
+                                                   <span class="price">45000 сом</span>
+                                             </div>                                          
+                                                
                                               <span class="catalog__text catalog--color ">Особняк районе Арча-Бешик Кара-Коо</span>
                                           </a>
                                       </div>
