цена для аренды недвижимости

--- a/arenda_nedvijenosti.html
+++ b/arenda_nedvijenosti.html
@@ -355,9 +355,8 @@
                                              <div class="catalog__wrapp-pic price--position ">
                                                    <img src="/assets/img/foto/home1.jpg" alt="catalog-pic"
                                                    class="catalog__pic">
-                                                   <span class="price">45000 сом</span>
-                                             </div>                                          
-                                                
+                                                   <div class="price">45000 сом</div>
+                                             </div>                                        
                                               <span class="catalog__text catalog--color ">Особняк районе Арча-Бешик Кара-Коо</span>
                                           </a>
                                       </div>
@@ -365,8 +364,11 @@
                                   <li class="catalog__item catalog--flex">
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
-                                              <img src="/assets/img/foto/home3.jpg" alt="catalog-pic"
-                                                  class="catalog__pic">
+                                                <div class="catalog__wrapp-pic price--position ">
+                                                      <img src="/assets/img/foto/home3.jpg" alt="catalog-pic"
+                                                      class="catalog__pic">
+                                                      <div class="price">35000 сом</div>
+                                                </div> 
                                               <span class="catalog__text catalog--color ">Особняк 4-х уровневый р/н Киргизия-1</span>
                                           </a>
                                       </div>
@@ -374,8 +376,11 @@
                                   <li class="catalog__item catalog--flex">
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
-                                              <img src="/assets/img/foto/home4.jpg" alt="catalog-pic"
-                                                  class="catalog__pic">
+                                                <div class="catalog__wrapp-pic price--position ">
+                                                      <img src="/assets/img/foto/home4.jpg" alt="catalog-pic"
+                                                      class="catalog__pic">
+                                                      <div class="price">55000 сом</div>
+                                                </div> 
                                               <span class="catalog__text catalog--color "> 4-x комнатная квартира р/н Киргизия-1</span>
                                           </a>
                                       </div>
@@ -383,8 +388,11 @@
                                   <li class="catalog__item catalog--flex">
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
-                                              <img src="/assets/img/foto/guest_house1.JPG" alt="catalog-pic"
-                                                  class="catalog__pic">
+                                                <div class="catalog__wrapp-pic price--position ">
+                                                      <img src="/assets/img/foto/guest_house1.JPG" alt="catalog-pic"
+                                                      class="catalog__pic">
+                                                      <div class="price">25000 сом</div>
+                                                </div> 
                                               <span class="catalog__text catalog--color ">Гостевой дом "Дипломат" </span>
                                           </a>
                                       </div>
