--- a/service.html
+++ b/service.html
@@ -448,7 +448,7 @@
                                     </li>
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
+                                            <a href="arenda_avto.html" class="catalog__link">
                                                 <img src="/assets/img/catalog/arenda_avto1.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Аренда автомобилей</span>
