сжатие картинок и стилизация аренда автомобилей

--- a/arenda_avto.html
+++ b/arenda_avto.html
@@ -353,11 +353,11 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                              <div class="catalog__wrapp-pic price--position ">
-                                                   <img src="/assets/img/foto/home1.jpg" alt="catalog-pic"
+                                                   <img src="/assets/img/foto/h1.jpg" alt="catalog-pic"
                                                    class="catalog__pic">
-                                                   <div class="price">45000 сом</div>
+                                                   <div class="price">10000 сом</div>
                                              </div>                                        
-                                              <span class="catalog__text catalog--color ">Особняк районе Арча-Бешик Кара-Коо</span>
+                                              <span class="catalog__text catalog--color ">Hyndau H-1</span>
                                           </a>
                                       </div>
                                   </li>
@@ -365,11 +365,11 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
-                                                      <img src="/assets/img/foto/home3.jpg" alt="catalog-pic"
+                                                      <img src="/assets/img/foto/3221b.jpg" alt="catalog-pic"
                                                       class="catalog__pic">
-                                                      <div class="price">35000 сом</div>
+                                                      <div class="price">15000 сом</div>
                                                 </div> 
-                                              <span class="catalog__text catalog--color ">Особняк 4-х уровневый р/н Киргизия-1</span>
+                                              <span class="catalog__text catalog--color ">Микроавтобус 6-10 мест</span>
                                           </a>
                                       </div>
                                   </li>
@@ -377,11 +377,11 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
-                                                      <img src="/assets/img/foto/home4.jpg" alt="catalog-pic"
+                                                      <img src="/assets/img/foto/Sprinter-906-Bus-tmb.jpg" alt="catalog-pic"
                                                       class="catalog__pic">
-                                                      <div class="price">55000 сом</div>
+                                                      <div class="price">550 сом</div>
                                                 </div> 
-                                              <span class="catalog__text catalog--color "> 4-x комнатная квартира р/н Киргизия-1</span>
+                                              <span class="catalog__text catalog--color ">Микроавтобус 12 мест </span>
                                           </a>
                                       </div>
                                   </li>
@@ -389,11 +389,11 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
-                                                      <img src="/assets/img/foto/guest_house1.JPG" alt="catalog-pic"
+                                                      <img src="/assets/img/foto/1trif.jpg" alt="catalog-pic"
                                                       class="catalog__pic">
-                                                      <div class="price">25000 сом</div>
+                                                      <div class="price">500 сом</div>
                                                 </div> 
-                                              <span class="catalog__text catalog--color ">Гостевой дом "Дипломат" </span>
+                                              <span class="catalog__text catalog--color ">Микроавтобус 20 мест</span>
                                           </a>
                                       </div>
                                   </li>                                  
