--- a/news.html
+++ b/news.html
@@ -338,63 +338,35 @@
                               <a href="index.html" class="breadcrumbs__link">Главная</a>
                            </li>
                            <li class="breadcrumbs__item">
-                              <a href="service.html" class="breadcrumbs__link breadcrumbs__link--activ">Аренда
-                                 автомобилей</a>
+                              <a href="news.html" class="breadcrumbs__link breadcrumbs__link--activ">Новости</a>
                            </li>
                         </ul>
                      </div>
                   </div>
-                  <h1 class="title title--margin ">
-                     Аренда автомобилей
-                  </h1>
-                  <div class="catalog-block">
-                     <ul class="catalog__list catalog__list--margin">
-                        <li class="catalog__item catalog--flex">
-                           <div class="catalog__desc">
-                              <a href="#" class="catalog__link">
-                                 <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/h1.jpg" alt="catalog-pic" class="catalog__pic">
-                                    <div class="price">10000 сом</div>
-                                 </div>
-                                 <span class="catalog__text catalog--color ">Hyndau H-1</span>
-                              </a>
-                           </div>
-                        </li>
-                        <li class="catalog__item catalog--flex">
-                           <div class="catalog__desc">
-                              <a href="#" class="catalog__link">
-                                 <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/3221b.jpg" alt="catalog-pic" class="catalog__pic">
-                                    <div class="price">15000 сом</div>
-                                 </div>
-                                 <span class="catalog__text catalog--color ">Микроавтобус 6-10 мест</span>
-                              </a>
-                           </div>
-                        </li>
-                        <li class="catalog__item catalog--flex">
-                           <div class="catalog__desc">
-                              <a href="#" class="catalog__link">
-                                 <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/Sprinter-906-Bus-tmb.jpg" alt="catalog-pic"
-                                       class="catalog__pic">
-                                    <div class="price">550 сом</div>
-                                 </div>
-                                 <span class="catalog__text catalog--color ">Микроавтобус 12 мест </span>
-                              </a>
-                           </div>
-                        </li>
-                        <li class="catalog__item catalog--flex">
-                           <div class="catalog__desc">
-                              <a href="#" class="catalog__link">
-                                 <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/1trif.jpg" alt="catalog-pic" class="catalog__pic">
-                                    <div class="price">500 сом</div>
-                                 </div>
-                                 <span class="catalog__text catalog--color ">Микроавтобус 20 мест</span>
-                              </a>
-                           </div>
-                        </li>
-                     </ul>
+                  <div class="news-title">
+                     05.04.2019 - Благотворительный турнир по мини футболу среди дипломатического корпуса аккредитованных в КР
+                  </div>
+                  <div class="main-content__text">
+                    <img src="/assets/img/foto/foot.jpg" alt="картинка футбола"> 
+                     29 сентября 2018 года состоялся благотворительный турнир по мини футболу среди дипломатического
+                     корпуса аккредитованных в КР, и приуроченный к празднованию Дня независимости Кыргызской
+                     Республики. В турнире приняли участие нижеследующие команды:
+                     <ol>
+                        <li>ПРООН</li>
+                        <li>Посольство Российской Федерации</li>
+                        <li>Министерство иностранных дел Кыргызской Республики</li>
+                        <li>Посольство Соединённых Штатов Америки</li>
+                        <li>Аппарат Правительство Кыргызской Республики</li>
+                        <li>Посольство Китайской Народной Республики</li>
+                        <li>Международный Комитет Красного Креста</li>
+                        <li>Посольство Республики Казахстан</li>
+                     </ol>
+                     <p>В итоге участниками турнира было собрано 120000 сом (сто двадцать тысяч сом). Все собранные
+                        денежные средства пойдут на оказания помощи в улучшения уровня и качества жизни детского дома
+                        «Бактылуу балалык» г.Токмок</p>
+                     <p> Генеральными спонсора данного благотворительного мероприятия выступили компании ОсОО
+                        «Абдыш-Ата» и ЗАО «ШОРО»</p>
+
                   </div>
                </main>
             </div>
