линки для новостей для показа

--- a/new-item.html
+++ b/new-item.html
@@ -349,7 +349,7 @@
                   <div class="new new--margin-bottom">
                      <ul class="new__list">
                            <li class="new__item">
-                              <a href="#" class="new__link">
+                              <a href="news.html" class="new__link">
                                  <div class="new__wrapper-pic">
                                        <img src="/assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
                                  </div>
