--- a/index.html
+++ b/index.html
@@ -417,14 +417,14 @@
                                     Новости
                                 </h2>
                                 <div class="new-title__block">
-                                    <a href="#" class="new-title__link">
+                                    <a href="new-item.html" class="new-title__link">
                                         читать все новости
                                     </a>
                                 </div>
                             </div>
                             <ul class="new__list">
                                 <li class="new__item">
-                                    <a href="#" class="new__link">
+                                    <a href="news.html" class="new__link">
                                         <div class="new__wrapper-pic">
                                             <img src="/assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
                                         </div>
