линки для подвала

--- a/index.html
+++ b/index.html
@@ -573,17 +573,17 @@
                     </div>
                     <ul class="footer-service__list">
                         <li class="footer-service__item">
-                            <a href="#" class="footer-service__link">
+                            <a href="new-item.html" class="footer-service__link">
                                 <div class="footer-service__text">Новости</div>
                             </a>
                         </li>
                         <li class="footer-service__item">
-                            <a href="#" class="footer-service__link">
+                            <a href="o-compyni.html" class="footer-service__link">
                                 <div class="footer-service__text">О компании</div>
                             </a>
                         </li>
                         <li class="footer-service__item">
-                            <a href="#" class="footer-service__link">
+                            <a href="contact.html" class="footer-service__link">
                                 <div class="footer-service__text">Контакты</div>
                             </a>
                         </li>
