--- a/arenda_nedvijenosti.html
+++ b/arenda_nedvijenosti.html
@@ -387,7 +387,7 @@
                                   </li>
                                   <li class="catalog__item catalog--flex">
                                       <div class="catalog__desc">
-                                          <a href="#" class="catalog__link">
+                                          <a href="arenda_nedvijenosti-inner.html" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
                                                       <img src="/assets/img/foto/guest_house1.JPG" alt="catalog-pic"
                                                       class="catalog__pic">
