--- a/arenda_nedvijenosti-inner.html
+++ b/arenda_nedvijenosti-inner.html
@@ -353,21 +353,17 @@
                      <div class="catalog-block__slaider">
                         <div class="slaider-big">
                            <div class="slaider-big__wrap">
-                              <img src="/assets/img/foto/guest_house2.JPG"  class="slaider-big__pic" alt="картинка дома">              
-                           </div>                                          
-                           <div class="slaider-big__wrap">
-                              <img src="/assets/img/foto/guest_house2.JPG"  class="slaider-big__pic" alt="картинка дома">              
-                           </div>                                          
-                                                                   
+                              <img src="/assets/img/foto/guest_house2.JPG"  class="slaider-big__pic" alt="картинка дома">                                       
+                              <img src="/assets/img/foto/guest_house4.jpg"  class="slaider-big__pic" alt="картинка дома">                                       
+                           </div>                             
+                                     
                        </div>
-                        <!-- <div class="slaider-small">
+                        <div class="slaider-small">
                            <div class="slaider-small__wrap">
                               <img src="/assets/img/foto/guest_house2.JPG" alt="картинка дома" class="slaider-small__pic">             
-                           </div>
-                           <div class="slaider-small__wrap">
                               <img src="/assets/img/foto/guest_house4.jpg" alt="картинка дома" class="slaider-small__pic">             
-                           </div>
-                       </div> -->
+                           </div>                        
+                       </div>
                      </div>
                      <div class="catalog-block__desc">
                         <div class="catalog-block__title">
