--- a/arenda_nedvijenosti-inner.html
+++ b/arenda_nedvijenosti-inner.html
@@ -358,12 +358,12 @@
                            </div>                             
                                      
                        </div>
-                        <div class="slaider-small">
+                        <!-- <div class="slaider-small">
                            <div class="slaider-small__wrap">
                               <img src="/assets/img/foto/guest_house2.JPG" alt="картинка дома" class="slaider-small__pic">             
                               <img src="/assets/img/foto/guest_house4.jpg" alt="картинка дома" class="slaider-small__pic">             
                            </div>                        
-                       </div>
+                       </div> -->
                      </div>
                      <div class="catalog-block__desc">
                         <div class="catalog-block__title">
