--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
-
+    <script src="//code.jivosite.com/widget.js" jv-id="waQAtyv07Z" async></script>
 
     <link rel="stylesheet" href="/assets/css/main.css">
     <title>Кыргыздипсервис</title>
