подправил stron для контента и ховер для хлебной крошки

--- a/o-compyni.html
+++ b/o-compyni.html
@@ -290,7 +290,7 @@
                         </h1>
                         <div class="main-content__text">
                            <img src="/assets/img/logo/logo.png" alt="логотип кыргыздипсервиса">
-                           <p>С начала установления дипломатических отношений между независимым Кыргызстаном и мировым сообществом Государственное Предприятие "Кыргыздипсервис" является единым заказчиком и координатором всех видов услуг по обслуживанию аккредитованного в республике дипломатического корпуса и надёжно обеспечивает деятельность дипломатических миссий и представительств международных организаций. ГП «Кыргыздипсервис»  предоставляет качественное обслуживание дипломатических</p>                    
+                           <p>С начала установления <strong>  дипломатических отношений</strong> между независимым Кыргызстаном и мировым сообществом Государственное Предприятие "Кыргыздипсервис" является единым заказчиком и координатором всех видов услуг по обслуживанию аккредитованного в республике дипломатического корпуса и надёжно обеспечивает деятельность дипломатических миссий и представительств международных организаций. ГП «Кыргыздипсервис»  предоставляет качественное обслуживание дипломатических</p>                    
                         </div>    
                         <h1 class="title title--margin ">
                           Наши зарубежные партнеры    
@@ -309,7 +309,7 @@
                         </div>          
                     </main>
                 </div>
-
+a
             </div>
         </div>
         <!-- конец фрапера -->
