--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <span class="close--nav"></span> 
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="index.html" class="nav__link">
+                        <a href="index.html" class="nav__link nav__link--color">
                             <span class="nav__animate">Главная</span>
                         </a>
                     </li>
