--- a/ad.html
+++ b/ad.html
@@ -344,7 +344,7 @@
                      </div>
                   </div>
                   <h1 class="title title--margin ">
-                     Новости
+                     Объвление 
                   </h1>
                   <div class="new new--margin-bottom">
                      <ul class="new__list">
