--- a/contact.html
+++ b/contact.html
@@ -355,7 +355,10 @@
                                     <textarea name="message" class="form-feedback__textarea" id=""
                                         placeholder="Ведите текст сообщения"></textarea>
                                 </div>
-                            </div>                            
+                            </div>
+                            <div class="form-item">
+                               
+                              </div>                            
                                 <button class="main-btn">Отправить</button>                          
                         </form>
                     </main>
