телефон доверия сделал

--- a/index.html
+++ b/index.html
@@ -631,6 +631,19 @@
                             </a>
                         </li>
                     </ul>
+                    <div class="footer-title footer--margin-title">
+                        Телефон доверия
+                    </div>
+                    <ul class="footer-service__list">
+                            <li class="footer-service__item">
+                                    <a href="#" class="footer-service__link">
+                                        <svg class="footer-icons__telephone" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#phone-solid">
+                                            </use>
+                                        </svg>
+                                        <span class="footer-service__text">996 (312) 66-55-44 доб.100</span>
+                                    </a>                                           
+                    </ul>
                 </div>
             </div>
         </div>
