аренду недвижимости подправил

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="top-line__top top-line__flex-container">
                     <div class="top-line__left">
                         <a href="#" class="top-line__left-link">
-                            Южное представительство в г.ОШ
+                            Заказать звонок
                         </a>
                     </div>
                     <div class="top-line__rigth">
